Fix label z-index for hub dropdown overlap VC-1545

--- a/public/sources/less/ui/item-list/styles.less
+++ b/public/sources/less/ui/item-list/styles.less
@@ -154,6 +154,7 @@
     position: absolute;
     top: -9px;
     right: -12px;
+    z-index: 4;
   }
 }
 
